--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "jquery": "^3.4.1",
     "react": "^16.10.2",
     "react-animated-text": "^0.1.4",
     "react-bootstrap": "^1.0.0-beta.15",
