--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-animated-text": "^0.1.4",
     "react-bootstrap": "^1.0.0-beta.15",
     "react-dom": "^16.10.2",
+    "react-responsive": "^8.0.1",
     "react-reveal": "^1.2.2",
     "react-scripts": "3.2.0",
     "react-scroll-parallax": "^2.2.0",
